--- a/.htaccess
+++ b/.htaccess
@@ -3,3 +3,8 @@ RewriteEngine on
 RewriteRule    ^$ app/webroot/    [L]
 RewriteRule    (.*) app/webroot/$1 [L]
 </IfModule>
+
+AuthType Basic
+AuthName "Input your ID and Password."
+AuthUserFile /home/plusstudy/www/.htpasswd
+require valid-user
